Opened 10 years ago

Closed 10 years ago

#12108 closed bug (fixed)

BTabView does not show view added to tab later

Reported by: markh Owned by: waddlesplash
Priority: normal Milestone: R1
Component: Kits/Interface Kit Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

If I initially create a tab and leave the view empty (passing NULL as the first parameter of AddTab) and later decide to add the view (by calling the SetView funtion of BTab), the view is not shown in Haiku. This does work in BeOS R5. I added a small test case in this ticket which shows the problem. In BeOS R5, the content of the tab shows a white background with the text "Hello World!" printed in it. In Haiku, the content stays empty (gray background color).

Tested with Haiku hrev49184.

Attachments (1)

BTabViewTest.cpp (1.7 KB ) - added by markh 10 years ago.
Code of small test program to show the problem

Download all attachments as: .zip

Change History (4)

by markh, 10 years ago

Attachment: BTabViewTest.cpp added

Code of small test program to show the problem

comment:1 by stippi, 10 years ago

Component: User InterfaceKits/Interface Kit
Owner: changed from stippi to axeld

comment:2 by waddlesplash, 10 years ago

Owner: changed from axeld to waddlesplash
Status: newin-progress

comment:3 by waddlesplash, 10 years ago

Resolution: fixed
Status: in-progressclosed

Fixed in hrev49398. Thanks for the reproducible testcase!

Note: See TracTickets for help on using tickets.